# QSIFinder

./: .gitignore  README.md  pyproject.toml
bulkTestData/: testData.json  testDataShort.json
bulkTestData/results/: falseNegatives.json  falsePositives.json  indices.json  trueNegatives.json  truePositives.json
src/: main.cpp
src/bulkTest/: __init__.py  bulkTestRunnerUi.py  bulkTester.py  bulk_test_runner_ui.py  bulk_tester.py  calculator.py  confusionMatrixUi.py  confusion_matrix_ui.py
src/data/: __init__.py  matDataObj.py
src/data/mp/: __init__.py  mpCleaner.py  mpRetriever.py
src/data/oqmd/: __init__.py  oqmdCleaner.py  oqmdRetriever.py
src/indexCalc/: __init__.py  calculator.py  subscores.py
src/math/: __init__.py
src/qsi.egg-info/: PKG-INFO  SOURCES.txt
src/ui/: __main__.py
tests/: testAll.py  testFullData.py  testMath.py  testMp.py  testOqmd.py  test_all.py  test_full_data.py  test_math.py  test_mp.py  test_oqmd.py
utils/: debug.py
